src/test/testFiles/invalid/semanticErrors/incorrectArgNumForFunctionCall.manimdsl
fun function(x: number, y: number): number {
    let z: number = x + x;
    return z;
}

let z = function(5);